# sandy

./: $null  .env.example  .gitignore  docker-compose.yml  fix_model_flash.py  pyproject.toml  run_backfill.py  run_backfill_2025_2026.py  run_checkpoint.py  run_train_all.py  sandy.example.toml  scripts
.kiro/hooks/: sync-to-ec2.kiro.hook
.kiro/specs/: sandy-roadmap.md
docs/: football_worldcup.md
notebooks/: football_explore.ipynb  football_explore.py  sandy_prototype.ipynb  sandy_prototype.py
sandy/: betmeta.py  betrefine.py  config.py  db.py  hyper.py  logging.py  odds.py  portfolio.py  portfolio_picks.py  schemas.py  weather.py
sandy/cli/: _helpers.py  features_cmd.py  football_cmd.py  ingest_cmd.py  labels_cmd.py  main.py  mls_cmd.py  nba_cmd.py  nfl_cmd.py  nhl_cmd.py  over_under_cmd.py  predict_all_cmd.py  predict_cmd.py  refresh_cmd.py  soccer_cmd.py  today_cmd.py  train_cmd.py
sandy/confidence/: assessor.py
sandy/dashboard/: Sandy.py  __init__.py  app.py  data.py  filters.py  grid.py
sandy/evaluation/: logger.py  reconciler.py  reporter.py
sandy/features/: builder.py  game_builder.py  runner.py  schema.py
sandy/football/: __init__.py  backtest.py  calibrator.py  client.py  ingest.py  notifier.py  parsers.py  predictor.py  queries.py  ratings.py  reconciler.py  report.py  schemas.py
sandy/ingest/: client.py  parsers.py  service.py
sandy/labels/: game_winner_generator.py  (+3 more)
tests/: conftest.py  test_e2e_integration.py  test_pbt_idempotent_ingest.py  test_pbt_label_monotonicity.py  test_pbt_probability_range.py  test_pbt_serializer_roundtrip.py  test_portfolio.py  test_portfolio_picks.py  test_volatility_model.py
(+110 files in other folders)
