[project]
name = "sandy"
version = "0.1.0"
description = "MLB per-inning reach-base predictor"
requires-python = "==3.11.*"

dependencies = [
    "click>=8.1",
    "lightgbm>=4.3",
    "numpy>=1.26",
    "pandas>=2.2",
    "psycopg[binary]>=3.1",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "tomli>=2.0",
]

[project.optional-dependencies]
dev = [
    "hypothesis>=6.100",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "testcontainers[postgres]>=4.0",
]

[project.scripts]
sandy = "sandy.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sandy"]

[tool.ruff]
line-length = 100
target-version = "py311"
